# FraudlentTransactionPrediction

./: .gitignore  README.md  app.py  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: integration.yaml
final_model/: MLmodel  conda.yaml  model.pkl
notebook/: scaler.pkl  score.ipynb
src/: train.py
templates/: index.html
